--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^3.2.0",
     "sharp": "^0.33.2",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
