--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^3.2.0",
     "sharp": "^0.33.2",
